@@ -112,7 +112,7 @@ class Smarty extends Smarty_Internal_TemplateBase
     /**
      * smarty version
      */
-    const SMARTY_VERSION = '3.1.34-dev-3';
+    const SMARTY_VERSION = '3.1.34-dev-4';
     /**
      * define variable scopes
      */
